--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#E67171"
     tools:context=".MainActivity">
 
     <TextView
@@ -52,6 +53,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="56dp"
+        android:background="#FFE500"
+        android:backgroundTint="#FFBF00"
         android:text="Calculate"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
